<resources>
    <string name="app_name">CSE110-Project</string>
    <string name="enter_previous_courses">Enter Previous Courses</string>
    <string name="subject">Subject</string>
    <string name="course_number">Course Number</string>
    <string name="done">Done</string>
    <string name="enter">Enter</string>
    <string name="list_of_inputted_courses">List of Inputted Courses</string>
    <string name="year">Year</string>
    <string name="quarter">Quarter</string>
    <string name="back">Back</string>
    <string name="start">Start</string>
    <string name="mock_nearby_messages">Mock Nearby Messages</string>
    <string name="start_app">Start App</string>
    <string name="enter_first_name_below">Enter First Name Below</string>
    <string name="first_name">First name...</string>
    <string name="confirm">Confirm</string>

    <string-array name="academic_years">
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
    </string-array>
    <string-array name="academic_quarters">
        <item>Fall</item>
        <item>Winter</item>
        <item>Spring</item>
        <item>Summer Session I</item>
        <item>Summer Session II</item>
        <item>Special Summer Session</item>
    </string-array>
</resources>